<resources>
    <string name="app_name" translatable="false">Crown Hunter</string>
    <string name="menu_home">Home</string>
    <string name="menu_monsters">Crowns</string>
    <string name="menu_events">Events</string>
    <string name="monster_hide">Hide finished</string>
    <string name="settings">Settings</string>

    <string name="s_head1">Monsters List</string>
    <string name="s_q1">Hide Iceborne Expansion</string>
    <string name="s_q1_summ">I don\'t have Iceborne yet, spare me the spoilers!</string>
    <string name="s_q2">Hide non-obligatory crowns</string>
    <string name="s_q2_summ">Hide monsters that were added after release and aren\'t needed for any achievements</string>
    <string name="s_q3">Set default list filtering</string>
    <string name="s_q3_summ_on">Hide finished monsters on start</string>
    <string name="s_q3_summ_off">Show full list on start</string>
    <string name="s_head2">App performance</string>
    <string name="s_q4">Show monsters and missions\' names in English</string>
    <string name="s_q4_summ">App in your local language, monsters\' names and missions in English</string>

    <string name="home_nav1">Crowns left</string>
    <string name="home_nav2">Recommended event for you</string>
    <string name="world">World</string>
    <string name="iceborne">Iceborne</string>

    <string name="home_mini">miniature</string>
    <string name="home_giant">giant</string>

    <string name="coming_soon">Coming soon!</string>

    <string name="jagras">Great Jagras</string>
    <string name="kulu" translatable="false">Kulu-Ya-Ku</string>
    <string name="pukei" translatable="false">Pukei-Pukei</string>
    <string name="barroth" translatable="false">Barroth</string>
    <string name="jyuratodus" translatable="false">Jyuratodus</string>
    <string name="tobi" translatable="false">Tobi-Kadachi</string>
    <string name="anja" translatable="false">Anjanath</string>
    <string name="rathian">Rathian</string>
    <string name="tzitzi" translatable="false">Tzitzi-Ya-Ku</string>
    <string name="paolumu" translatable="false">Paolumu</string>
    <string name="girros">Great Girros</string>
    <string name="radobaan" translatable="false">Radobaan</string>
    <string name="legiana" translatable="false">Legiana</string>
    <string name="odogaron" translatable="false">Odogaron</string>
    <string name="rathalos" translatable="false">Rathalos</string>
    <string name="diablos" translatable="false">Diablos</string>
    <string name="kirin" translatable="false">Kirin</string>
    <string name="dodogama" translatable="false">Dodogama</string>
    <string name="pink_rathian">Pink Rathian</string>
    <string name="bazelgeuse">Bazelgeuse</string>
    <string name="lavasioth" translatable="false">Lavasioth</string>
    <string name="uragaan" translatable="false">Uragaan</string>
    <string name="azure_rathalos">Azure Rathalos</string>
    <string name="black_diablos">Black Diablos</string>
    <string name="nergigante">Nergigante</string>
    <string name="teostra" translatable="false">Teostra</string>
    <string name="kushala_daora" translatable="false">Kushala Daora</string>
    <string name="vaal_hazak" translatable="false">Vaal Hazak</string>
    <string name="lunastra" translatable="false">Lunastra</string>
    <string name="deviljho" translatable="false">Deviljho</string>
    <string name="beotodus" translatable="false">Beotodus</string>
    <string name="banbaro" translatable="false">Banbaro</string>
    <string name="viper_tobi">Viper Tobi-Kadachi</string>
    <string name="night_paolumu">Nightshade Paolumu</string>
    <string name="coral_pukei">Coral Pukei-Pukei</string>
    <string name="barioth" translatable="false">Barioth</string>
    <string name="nargacuga">Nargacuga</string>
    <string name="glavenus" translatable="false">Glavenus</string>
    <string name="tigrex" translatable="false">Tigrex</string>
    <string name="brachydios" translatable="false">Brachydios</string>
    <string name="acidic_glavenus">Acidic Glavenus</string>
    <string name="shrieking_legiana">Shrieking Legiana</string>
    <string name="fulgur_anja">Fulgur Anjanath</string>
    <string name="ebony_odogaron">Ebony Odogaron</string>
    <string name="velkhana">Velkhana</string>
    <string name="seeth_bazelgeuse">Seething Bazelgeuse</string>
    <string name="black_vaal">Blackveil Vaal Hazak</string>
    <string name="namielle">Namielle</string>
    <string name="sav_deviljho">Savage Deviljho</string>
    <string name="ruin_nergigante">Ruiner Nergigante</string>
    <string name="zinogre">Zinogre</string>
    <string name="yian_garuga" translatable="false">Yian Garuga</string>
    <string name="scar_yian_garuga">Scarred Yian Garuga</string>
    <string name="brute_tigrex">Brute Tigrex</string>
    <string name="gold_rathian">Gold Rathian</string>
    <string name="silver_rathalos">Silver Rathalos</string>
    <string name="stygian_zinogre">Stygian Zinogre</string>
    <string name="rajang" translatable="false">Rajang</string>
    <string name="furious_rajang">Furious Rajang</string>

    <string name="ad_publisher_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_main_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_events_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="ad_publisher" translatable="false">ca-app-pub-8421723784560504~6615005193</string>
    <string name="ad_main" translatable="false">ca-app-pub-8421723784560504/7284540292</string>
    <string name="ad_events" translatable="false">ca-app-pub-8421723784560504/3941219322</string>
    <string name="scheduler" translatable="false">Due to the effects of COVID-19, updates to the Event Quest Schedule have been temporarily suspended. Please refer to the in-game event schedule for the most recent information.</string>
    <string name="temporarily_unavailable" translatable="false">Temporarily Unavailable</string>
    <string name="usj_gold_star">★3 USJ: Gold Star Treatment</string>
    <string name="a_rush_of_blood">★7 A Rush of Blood</string>
    <string name="usj_blazing">★7 USJ: Blazing Azure Stars!</string>
    <string name="egg_lovers">★6 Egg Lovers United</string>
    <string name="deep_green">★7 Deep Green Blues</string>
    <string name="wildspire_bolero">★7 Wildspire Bolero</string>
    <string name="coral_waltz">★7 Coral Waltz</string>
    <string name="effluvial_opera">★7 Effluvial Opera</string>
    <string name="rock_n_roll">★7 Rock N\' Roll Recess</string>
    <string name="chances">Your chances for crown:</string>
    <string name="greatest_jagras">★9 The Greatest Jagras</string>
    <string name="name_is_lavasioth">★9 The Name\'s Lavasioth!</string>
    <string name="down_dark_muddy_path">★3 Down the Dark, Muddy Path</string>
    <string name="paolumu_lullabies">M★2 Paolumu Lullabies</string>
    <string name="blazing_sun">★8 The Blazing Sun</string>
    <string name="yodeling_in_forest">M★6 Yodeling in the Forest</string>
    <string name="heavy_metal">M★6 Heavy Metal in the Waste</string>
    <string name="symphony_of_coral">M★6 Symphony of the Coral</string>
    <string name="rotten_canzone">M★6 Rotten Canzone</string>
    <string name="alt_rock_recess">M★6 Alt Rock Recess</string>
    <string name="ballad_of_hoarfrost">M★6 Ballad of the Hoarfrost</string>
    <string name="seeing_is_believing">M★3 Seeing is Believing</string>
    <string name="dont_forget_earplugs">M★6 Don\'t Forget The Earplugs!</string>
    <string name="monkey_business">M★6 Monkey Business</string>
    <string name="mighty_muscle_monkey_business">M★6 Mighty Muscle Monkey Madness</string>
    <string name="kadachi_twins">M★2 Kadachi Twins</string>
    <string name="farawell_to_zinogre">M★6 A Farewell to Zinogre</string>
    <string name="brand_new_brute">M★6 Brand New Brute</string>
</resources>
